objects/Region__mdt.object
<CustomObject>
    <label>Region</label>
    <pluralLabel>Regions</pluralLabel>
    <fields>
        <fullName>APIName__c</fullName>
        <label>APIName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionName__c</fullName>
        <label>RegionName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>